# bam

./: .gitignore  .ocamlformat  AGENTS.md  CHANGES  LICENSE  README.md  bam-ppx.opam  bam.opam  dune-project  index.html  tezt-bam.opam  tezt-bam.opam.template
.github/workflows/: build.yml
bam/: index.html  shrinking.html
bam-ppx/: index.html
bam-ppx/Bam_ppx/: index.html
bam-ppx/Bam_ppx/Runtime/: index.html
bam/Bam/: index.html
bam/Bam/Std/: index.html
bam/Bam/Std/Shrinker/: index.html
bam/Bam/Std/Syntax/: index.html
bam/Bam/Tree/: index.html
bam/Bam/Tree/Forest/: index.html
bam/Bam/Tree/Forest/Syntax/: index.html
bam/Bam/Tree/Syntax/: index.html
example/: README.md  dune  main.ml
example/1-simple/: README.md  dune  simple.ml
example/2-simple-failure/: README.md  dune  simple_failure.ml
example/3-debugging/: README.md  debugging.ml  dune
example/3-writing-generators/: README.md  dune  writing_generators.ml
example/4-deriving-generators/: README.md  deriving_generators.ml  dune
example/4-writing-generators/: README.md  dune  writing_generators.ml
example/5-deriving-generators/: README.md  deriving_generators.ml
example/5-shrinking-strategy/: README.md  dune  shrinking_strategy.ml
example/6-debugging/: README.md  debugging.ml  dune
lib_bam/: bam.ml  bam.mli  dune  gen.ml  gen.mli  genT.ml  genT.mli  shrinking.mld  std.ml  std.mli  tree.ml  tree.mli
lib_ppx/: attributes.ml  attributes.mli  bam_ppx.ml  deriver.ml  deriver.mli  dune  helpers.ml  helpers.mli  limits.ml  runtime.ml  runtime.mli  ty.ml  ty.mli
lib_tezt_bam/: dune  runner.ml  runner.mli  tezt_bam.ml  tezt_bam.mli
test/: dune  gen.ml  main.ml  pbt.ml  ppx.ml  std.ml  tree.ml
test/expected/gen.ml/: Gen.z_range.out
test/expected/pbt.ml/: -pbt- - Check strategies of Std.pair.out  -pbt- - Std.int.out  -pbt- - Std.list nested.out  -pbt- - Std.list skip strategy.out  -pbt- - Std.list strategies.out  -pbt- - Std.list.out  -pbt- - Std.pair.out  -pbt- Tree.binary-search.out
test/expected/std.ml/: std oneof.out
test/expected/tree.ml/: Tree.binary_search.out  Tree.crunch.out  Tree.fractional_binary_search.out  Tree.shrink.out
tezt-bam/: index.html
tezt-bam/Tezt_bam/: index.html
tezt-bam/Tezt_bam/Pbt/: index.html
tezt-bam/Tezt_bam/Test/: index.html
